更新接口文档标签，
待解决问题：GetPetInfoByID接口返回值400
