# controller/pet.go
@@ -6,6 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 	"net/http"
+	"strconv"
 )
 
 // AddPet
@@ -36,20 +37,21 @@ func AddPet(c *gin.Context) {
 
 // GetPetInfoByID
 // @Summary 通过宠物id查询宠物信息
-// @Description 通过宠物id查询宠物信息 eg：{ "pet_id":2 }
+// @Description 通过宠物id查询宠物信息
 // @Tags Pet
 // @Accept  json
 // @Produce  json
-// @Param   id    path    uint     true      "id"
+// @Param   id    path    uint     true      "pet_id"
 // @Success 200 {string} string	"ok"
-// @Router /v1/pet/getPetInfoByID [GET]
+// @Router /v1/pet/getPetInfoByID/{id} [GET]
 func GetPetInfoByID(c *gin.Context) {
 	id, ok := c.Params.Get("id")
 	if !ok {
 		c.JSON(http.StatusOK, gin.H{"error": "无效的id！"})
 		return
 	}
-	pet, err := models.GetUserById(id)
+	petId, err := strconv.ParseInt(id, 10, 64)
+	pet, err := models.GetPetInfoByID(uint(petId))
 	if err != nil {
 		c.JSON(http.StatusOK, gin.H{"error": err.Error()})
 		return
